--- a/config.toml
+++ b/config.toml
@@ -1,30 +1,31 @@
-baseURL = "http://tiago.dalligna.com/"
+baseurl = "http://tiago.dalligna.com/"
 languageCode = "en-us"
 title = "Tiago on tech"
 theme = "purehugo"
 Paginate = 10
-
-# Main
-github = "tiagodll"
+disqusShortname = "tiagodll"
 
 [params]
+  # twitterName = "tiagodll"
   githubName = "tiagodll"
+  stackOverflowId = "392974"
+  linkedinName = "tiagodll"
   description = "My random thoughts and experiences"
   dateFormat = "2021-07-22"
 
 [permalinks]
-  posts = "/:year/:month/:title/"
+  posts = "/:year/:month/:title/"
 
 [markup]
-  [markup.highlight]
-    anchorLineNos = false
-    codeFences = true
-    guessSyntax = false
-    hl_Lines = ""
-    lineAnchors = ""
-    lineNoStart = 1
-    lineNos = false
-    lineNumbersInTable = true
-    noClasses = true
-    style = "monokai"
-    tabWidth = 4
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ""
+    lineAnchors = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = "monokai"
+    tabWidth = 4
