--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,11 @@ jobs:
     - name: Build
       run: hugo --minify
       
-    - name: SSH Server Deploy
-      uses: kostya-ten/ssh-server-deploy@v4
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        port: ${{ secrets.SERVER_PORT }}
-        username: ${{ secrets.REMOTE_USER }}
-        private_key: ${{ secrets.SERVER_SSH_KEY }}
-        scp_source: ./public
-        scp_target: /var/www/blog
+    - name: Deploy to Staging server
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        SOURCE: "./public/"
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.REMOTE_TARGET }}
