--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,31 @@
-name: Deploy to server
+#name: Deploy to server
 
-on: [push]
+#on: [push]
 
-jobs:
-  deploy:
+#jobs:
+#  deploy:
 
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true  # Fetch Hugo themes (true OR recursive)
-        fetch-depth: 0 
+#    steps:
+#    - uses: actions/checkout@v2
+#      with:
+#        submodules: true  # Fetch Hugo themes (true OR recursive)
+#        fetch-depth: 0 
         
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: 'latest'
+#    - name: Setup Hugo
+#      uses: peaceiris/actions-hugo@v2
+#      with:
+#        hugo-version: 'latest'
         
-    - name: Build
-      run: hugo --minify
+#    - name: Build
+#      run: hugo --minify
       
-    - name: Deploy to Staging server
-      uses: easingthemes/ssh-deploy@main
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SOURCE: "./public/"
-        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-        REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        TARGET: ${{ secrets.REMOTE_TARGET }}
+#    - name: Deploy to Staging server
+#      uses: easingthemes/ssh-deploy@main
+#      env:
+#        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#        SOURCE: "./public/"
+#        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+#        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+#        TARGET: ${{ secrets.REMOTE_TARGET }}
